# AI-Powered-Kubernetes-Operations-Assistant-for-AWS-Eks

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/eks_assistant/: __init__.py  main.py
backend/src/eks_assistant/api/: __init__.py  deps.py
backend/src/eks_assistant/api/routes/: assistant.py  cluster.py  connections.py  diagnostics.py  incidents.py  k8sgpt.py  remediation.py  workspaces.py
backend/src/eks_assistant/api/schemas/: assistant.py  connection_bootstrap.py  k8sgpt.py
backend/src/eks_assistant/core/: config.py
backend/src/eks_assistant/db/: __init__.py  models.py  session.py
backend/src/eks_assistant/services/: __init__.py  bedrock_client.py  cluster_context.py  k8sgpt_runner.py  kubernetes_gateway.py  kubernetes_service.py  remediation_rules.py  workspace_purge.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/nginx/: default.conf
frontend/src/: App.tsx  main.tsx
frontend/src/api/: http-client.ts  tenant.ts
frontend/src/components/: DescribeBlocks.tsx
frontend/src/context/: AnalysisContext.tsx  TenantContext.tsx
frontend/src/layout/: AppLayout.tsx  ClusterShellLayout.tsx  LandingLayout.tsx  WorkspaceAssistantPanel.tsx  WorkspaceLayout.tsx
frontend/src/pages/: ClusterComputePage.tsx  ClusterExplorerPage.tsx  ClusterMiscPages.tsx  ConnectWizardPage.tsx  IncidentsPage.tsx  OverviewPage.tsx  RemediationPage.tsx  WorkspacesPage.tsx
kubernetes/: rbac-eks-operations-assistant.yaml
(+1 files in other folders)
